# Ares-CV-Debug-Platform

./: CMakeLists.txt  README.md  main.cpp  start.sh  task.cpp
UltraMultiThread/: CMakeLists.txt
include/: camera.h
script/: app.py  autoaim.py  back_run.py
script/templates/: index.html
web_live/: web_live.cpp  web_live.h
